--- a/SYSTEM_ZARZADZANIA_SKLEPEM_BUDOWLANYM.csproj
+++ b/SYSTEM_ZARZADZANIA_SKLEPEM_BUDOWLANYM.csproj
@@ -5,7 +5,12 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="icon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.31" />
