added support for user statistics and application icon :)

--- a/SYSTEM_ZARZADZANIA_SKLEPEM_BUDOWLANYM.csproj
+++ b/SYSTEM_ZARZADZANIA_SKLEPEM_BUDOWLANYM.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <ApplicationIcon>icon.ico</ApplicationIcon>
+    <Title>System Zarządzania Sklepem Budowlanym</Title>
+    <PackageIcon>ikona.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +16,13 @@
 
   <ItemGroup>
     <PackageReference Include="MySql.Data" Version="8.0.31" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="ikona.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
